Alterando o design para a nova versão

--- a/src/html/remessas_internacionais copy/componentes/lista_remessas/lista_remessas.html
+++ b/src/html/remessas_internacionais copy/componentes/lista_remessas/lista_remessas.html
@@ -39,6 +39,14 @@
           <br-remessa></br-remessa>              
         </div>
       </div>
+      <div style="justify-content: right; text-align: right; justify-items: right;">
+        <a href="#" aria-label="Avalie esse serviço">
+          <i class="fa fa-message" style="color: 0C326F;" aria-hidden="true"></i>
+          <b>Avalie esse serviço</b>
+        </a>
+      </div>
+     
     </div> 
   </div>
 </div>  
+
