Alterando o design para a nova versão

--- a/src/html/remessas_internacionais novo/componentes/lista_remessas/dados_remessa/dados_remessa.html
+++ b/src/html/remessas_internacionais novo/componentes/lista_remessas/dados_remessa/dados_remessa.html
@@ -15,13 +15,13 @@
       <p class="label my-3">Sua compra é em site Remessa Conforme?</p>
       <div class="d-inline-block mr-5">
         <div class="br-radio">
-          <input id="h-radio-1" type="radio" name="h-radio" value="h-radio-1"/>
+          <input id="com_remessa_conforme" type="radio" name="h-radio" value="h-radio-1"/>
           <label for="h-radio-1">Sim</label>
         </div>
       </div>
       <div class="d-inline-block mr-5">
         <div class="br-radio">
-          <input id="h-radio-2" type="radio" name="h-radio" value="h-radio-2"/>
+          <input id="sem_remessa_conforme" type="radio" name="h-radio" value="h-radio-2"/>
           <label for="h-radio-2">Não</label>
         </div>
       </div>
@@ -36,7 +36,7 @@
               <label class="text-nowrap" for="ii-remessa">Federal - Imposto de Importação (II)</label>
             </div>
             <div class="input-content text-right">
-              <input id="ii-remessa" class="campos-calculados" type="text" placeholder="R$ 0,00"/>
+              <input id="ii-remessa" class="campos-calculados" type="text" placeholder="R$ 0,00" disabled/>
             </div>
           </div>
         </div>                 
@@ -51,7 +51,7 @@
               <label class="text-nowrap" for="icms-remessa">Estadual - ICMS</label>
             </div>
             <div class="input-content text-right">
-              <input id="icms-remessa" class="campos-calculados" type="text" placeholder="R$ 0,00"/>
+              <input id="icms-remessa" class="campos-calculados" type="text" placeholder="R$ 0,00" disabled/>
             </div>
           </div>
         </div>   
