Testando para mobile

--- a/src/html/remessas_internacionais novo/componentes/cabecalho/cabecalho.html
+++ b/src/html/remessas_internacionais novo/componentes/cabecalho/cabecalho.html
@@ -6,7 +6,7 @@
   <div class="container-lg">
     <div class="header-top">
       <div class="header-logo">
-        <a style="text-decoration: none; color: #000000" href="https://www.gov.br/receitafederal/pt-br">
+        <a href="https://www.gov.br/receitafederal/pt-br">
           <img class="img-logo" src="./img/receita-federal-logo.png" alt="logo"/>
         </a>
         <span class="br-divider vertical mx-half mx-sm-1"></span>
