--- a/src/html/remessas_internacionais novo/componentes/lista_remessas/dados_remessa/dados_remessa.html
+++ b/src/html/remessas_internacionais novo/componentes/lista_remessas/dados_remessa/dados_remessa.html
@@ -61,7 +61,7 @@
         <div class="col-md">
           <div class="br-card card-total">
             <div class="card-content">
-              <div class="br-input text-left col-6 col-sm-6 col-md-6 col-lg-6">
+              <div class="br-input text-left col-6">
                 <label class="text-left" for="valor-remessa">Total com impostos</label>
                 <input class="campos-calculados total-remessa text-left" id="total-remessa" placeholder="R$ 0,00" type="text" disabled/>
               </div>
