--- a/src/html/remessas_internacionais novo/componentes/lista_remessas/lista_remessas.html
+++ b/src/html/remessas_internacionais novo/componentes/lista_remessas/lista_remessas.html
@@ -5,7 +5,7 @@
 
   <div class="row">
 
-    <div class="row col-6 col-sm-12 col-md-6 col-lg-6">
+    <div class="row row-texto col-lg-6 col-md-6 col-sm-12">
       <div class="main-content pl-sm-3 mt-4" id="main-content">
         <h1 class="titulo mb-2">Calculadora</h1>
         <h2 class="mt-1">Compras Internacionais</h2>
@@ -20,12 +20,12 @@
           especiais, como isenções para medicamentos. 
         </p>
       
-        <div class="br-input input-inline">
+        <div class="br-input small input-inline">
           <div class="input-label">
             <p><b>Atualize a Cotação do Dólar: </b></p>
           </div>
           <div class="input-content">
-            <input class="text-center" id="valor_cotacao_dolar" style="width: 30%" placeholder="R$ 0,00" type="text" />
+            <input class="text-center" id="valor_cotacao_dolar" style="width: 40%" placeholder="R$ 0,00" type="text" />
           </div>
         </div>
       </div>
