cor de fundo conforme for ou não remessa conforme

--- a/src/html/remessas_internacionais_v2/componentes/calculadora_compras/calculadora_compras.html
+++ b/src/html/remessas_internacionais_v2/componentes/calculadora_compras/calculadora_compras.html
@@ -59,15 +59,15 @@
 
       <div class="row">
         <div class="col-md">
-          <div class="br-card card-total">
+          <div class="br-card card-total" id="card_total">
             <div class="card-content">
               <div class="br-input text-left col-6 container-total-remessa">
                 <div>Total com impostos</div>                
-                <div class="campos-calculados total-remessa text-left" id="total-remessa">R$ 45,00</div>
+                <div class="campos-calculados total-remessa text-left" id="total-remessa">R$ 0,00</div>
               </div>              
-              <div class="col-12 mb-3">
+              <div class="col-12 mb-3" id="container_valor_alternativo">
                 <div class="d-flex align-items-center">                                     
-                  <span class="text-nowrap" id="valor_alternativo">Seria R$ 45,00 sem a Remessa Conforme</span>                  
+                  <span class="text-nowrap" id="valor_alternativo"></span>                  
                 </div>
                 <a target="_blank" href="https://www.gov.br/receitafederal/pt-br/assuntos/aduana-e-comercio-exterior/manuais/remessas-postal-e-expressa/programa-remessa-conforme-o-que-e-como-funciona">Entenda esses valores</a>
               </div>              
