--- a/src/html/remessas_internacionais_v3/componentes/calculadora_compras/calculadora_compras.html
+++ b/src/html/remessas_internacionais_v3/componentes/calculadora_compras/calculadora_compras.html
@@ -59,7 +59,7 @@
 
       <div class="row">
         <div class="col-md">
-          <div class="br-card card-total" id="card_total">
+          <div class="card-total" id="card_total">
             <div class="card-content">
               <div class="br-input text-left col-6 container-total-remessa">
                 <div>Total com impostos</div>                
