forçando input da cotação do dolar a aparecer pois estava sumindo no mobile

--- a/src/html/remessas_internacionais_v3/componentes/painel_informacoes/painel_informacoes.html
+++ b/src/html/remessas_internacionais_v3/componentes/painel_informacoes/painel_informacoes.html
@@ -14,7 +14,7 @@
         <p><b>Atualize a Cotação do Dólar: </b></p>
       </div>
       <div class="input-content">
-        <input class="text-center" id="valor_cotacao_dolar" style="width: 40%" placeholder="R$ 0,00" type="text" />
+        <input class="text-center" id="valor_cotacao_dolar" placeholder="R$ 0,00" type="text" />
       </div>
     </div>
 </div>
