no mobile o imposto de importação não esta aparecendo

--- a/src/html/remessas_internacionais_v3/componentes/calculadora_compras/calculadora_compras.html
+++ b/src/html/remessas_internacionais_v3/componentes/calculadora_compras/calculadora_compras.html
@@ -33,7 +33,7 @@
         <div class="col-12 mb-3">
           <div class="br-input small input-inline">
             <div class="input-label">
-              <label class="text-nowrap" for="ii-remessa">Federal - Imposto de Importação (II)</label>
+              <label  for="ii-remessa">Federal - Imposto de Importação (II)</label>
             </div>
             <div class="input-content text-right">
               <input id="ii-remessa" class="campos-calculados" type="text" placeholder="R$ 0,00" disabled/>
