tentando dar mais espaço para o imposto de importação colocando em duas linhas para aparecer o valor

--- a/src/html/remessas_internacionais_v3/componentes/calculadora_compras/calculadora_compras.html
+++ b/src/html/remessas_internacionais_v3/componentes/calculadora_compras/calculadora_compras.html
@@ -33,22 +33,18 @@
         <div class="col-12 mb-3">
           <div class="br-input small input-inline">
             <div class="input-label">
-              <label  for="ii-remessa">Federal - Imposto de Importação (II)</label>
+              <label class="left-aligned-label" for="ii-remessa">Federal<br>Imposto de Importação (II)</label>
             </div>
             <div class="input-content text-right">
               <input id="ii-remessa" class="campos-calculados" type="text" placeholder="R$ 0,00" disabled/>
             </div>
           </div>
-        </div>                 
-        <div class="br-input campo-oculto">
-          <label for="soma-remessa">Valor da Encomenda + II</label>
-          <input class="campos-calculados" id="soma-remessa" disabled>
-        </div>
+        </div>                         
         <div class="col-12 mb-3">
           <span class="br-divider dashed my-1"></span>
           <div class="br-input small input-inline">
             <div class="input-label">
-              <label class="text-nowrap" for="icms-remessa">Estadual - ICMS</label>
+              <label class="left-aligned-label" for="icms-remessa">Estadual<br>ICMS</label>
             </div>
             <div class="input-content text-right">
               <input id="icms-remessa" class="campos-calculados" type="text" placeholder="R$ 0,00" disabled/>
