removendo arquivos não utilizados

--- a/src/html/remessas_internacionais_v3/index.html
+++ b/src/html/remessas_internacionais_v3/index.html
@@ -24,7 +24,7 @@
     <script src="./componentes/calculadora_compras/calculadora_compras.js" type="module"></script>    
 
      <!-- Scripts da aplicação principal -->
-     <script src="./js/main.js" type="module"></script>
+     <script src="./js/principal.js" type="module"></script>
 
      <!-- Scripts do gov.br -->
      <script src="./bibliotecas/govbr-ds/core.js" type="module"></script>
