--- a/src/html/remessas_internacionais_v3/index.html
+++ b/src/html/remessas_internacionais_v3/index.html
@@ -5,8 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
+
+
     <title>Calculadora - Compras Internacionais</title>
 
+    <meta name="description" content="Calculadora de impostos para compras internacionais em sites certificadas pelo Programa Remessa Conforme (PRC). Permite comparar o valor do imposto com e sem o Programa Remessa Conforme.">
+    <meta name="keywords" content="calculadora de impostos, compras internacionais, Programa Remessa Conforme, PRC, Receita Federal, Correios, e-commerce, importação, estimativas de impostos, portal compras internacionais, manual de encomendas internacionais, orientação ao comprador">
+
+    <meta property="og:title" content="Calculadora de Impostos para Compras Internacionais">
+    <meta property="og:description" content="Use nossa calculadora para estimar impostos em compras internacionais certificadas pelo Programa Remessa Conforme (PRC). Lançamento do Portal Compras Internacionais em 30 de julho de 2024.">
+    <meta property="og:image" content="https://www.gov.br/receitafederal/pt-br/assuntos/aduana-e-comercio-exterior/manuais/remessas-postal-e-expressa/calculadora-versao-iii/imagens/programa_remessa_conforme.jpeg">
+    <meta property="og:url" content="https://www.gov.br/receitafederal/pt-br/assuntos/aduana-e-comercio-exterior/manuais/remessas-postal-e-expressa/calculadora-versao-iii/index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="pt_BR">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="/receitafederal/++theme++padrao_govbr/favicons/favicon-32x32.png">
+    <link rel="shortcut icon" type="image/png" href="/receitafederal/++theme++padrao_govbr/favicons/favicon-48x48.png">
+    
     <!-- Google Tag Manager -->
     <script type="text/javascript" async="" src="https://www.googletagmanager.com/gtag/js?id=G-WGZPDK4DH1&amp;l=dataLayer&amp;cx=c"></script>
     <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-NHZSKTD"></script>
