--- a/src/html/remessas_internacionais_v3/componentes/painel_informacoes/painel_informacoes.html
+++ b/src/html/remessas_internacionais_v3/componentes/painel_informacoes/painel_informacoes.html
@@ -1,3 +1,6 @@
+
+<link rel="stylesheet" href="./painel_informacoes.css" />
+
 <div class="main-content pl-sm-3 mt-4" id="main-content">
     <h1 class="titulo mb-2">Calculadora</h1>
     <h2 class="mt-1">Compras Internacionais</h2>
