servidor local pyhton para testar no mobile; margem do lado esquerdo do painel de informações

--- a/src/html/remessas_internacionais_v3/calculadora.html
+++ b/src/html/remessas_internacionais_v3/calculadora.html
@@ -73,6 +73,11 @@
             <div class="row">
           
               <div class="row row-texto col-lg-6 col-md-6 col-sm-12">
+                <style>
+                  painel-informacoes {
+                    margin-left: 20px;
+                  }
+                </style>
                 <painel-informacoes></painel-informacoes>
               </div>
           
