--- a/src/html/remessas_internacionais_v3/calculadora.html
+++ b/src/html/remessas_internacionais_v3/calculadora.html
@@ -76,6 +76,7 @@
                 <style>
                   painel-informacoes {
                     margin-left: 20px;
+                    margin-right: 5px;
                   }
                 </style>
                 <painel-informacoes></painel-informacoes>
