tentando alinhar a cotação do dolar

--- a/src/html/remessas_internacionais_v3/componentes/painel_informacoes/painel_informacoes.html
+++ b/src/html/remessas_internacionais_v3/componentes/painel_informacoes/painel_informacoes.html
@@ -11,13 +11,13 @@
       <br>
       Esta calculadora fornece apenas estimativas para mercadorias comuns, excluindo situações especiais como medicamentos ou isenções. 
     </p>
-  
-    <div class="br-input small input-inline">
-      <div class="input-label">
-        <p><b>Atualize a Cotação do Dólar: </b></p>
-      </div>
-      <div class="input-content">
-        <input class="text-center" id="valor_cotacao_dolar" placeholder="R$ 0,00" type="text" />
-      </div>
+    <div class="br-input small input-inline">      
+        <div class="input-label">
+          <p><b>Atualize a Cotação do Dólar: </b></p>
+        </div>
+        <div class="input-content">
+          <input class="text-center" id="valor_cotacao_dolar" placeholder="R$ 0,00" type="text" />
+        </div>
+      </span>
     </div>
 </div>
