Refinando os espaçamentos e alinhamentos

--- a/src/html/remessas_internacionais_v3/componentes/painel_informacoes/painel_informacoes.html
+++ b/src/html/remessas_internacionais_v3/componentes/painel_informacoes/painel_informacoes.html
@@ -12,7 +12,7 @@
       Esta calculadora fornece apenas estimativas para mercadorias comuns, excluindo situações especiais como medicamentos ou isenções. 
     </p>
     <div class="br-input small input-inline">      
-        <div class="input-label">
+        <div class="input-label mt-4">
           <p><b>Atualize a Cotação do Dólar: </b></p>
         </div>
         <div class="input-content">
