--- a/src/html/remessas_internacionais_v3/componentes/calculadora_compras/calculadora_compras.html
+++ b/src/html/remessas_internacionais_v3/componentes/calculadora_compras/calculadora_compras.html
@@ -33,7 +33,8 @@
         <div class="col-12 mb-3">
           <div class="br-input small input-inline">
             <div class="input-label">
-              <label class="left-aligned-label" for="ii-remessa">Federal<br>Imposto de Importação (II)</label>
+              <label class="left-aligned-label" for="ii-remessa">Federal - Imposto de Importação (II)</label>
+              <label class="left-aligned-label-mobile" for="ii-remessa">Federal<br>Imposto de Importação (II)</label>
             </div>
             <div class="input-content text-right">
               <input id="ii-remessa" class="campos-calculados" type="text" placeholder="R$ 0,00" disabled/>
@@ -44,7 +45,8 @@
           <span class="br-divider dashed my-1"></span>
           <div class="br-input small input-inline">
             <div class="input-label">
-              <label class="left-aligned-label" for="icms-remessa">Estadual<br>ICMS</label>
+              <label class="left-aligned-label" for="icms-remessa">Estadual - ICMS</label>
+              <label class="left-aligned-label-mobile" for="icms-remessa">Estadual<br>ICMS</label>
             </div>
             <div class="input-content text-right">
               <input id="icms-remessa" class="campos-calculados" type="text" placeholder="R$ 0,00" disabled/>
