Atualizando componentes site Siscaer

--- a/src/html/siscaer/componentes/cabecalho/cabecalho.html
+++ b/src/html/siscaer/componentes/cabecalho/cabecalho.html
@@ -3,7 +3,7 @@
 <header class="br-header mb-4" id="header" data-sticky="data-sticky">
   <div class="container-lg">
     <div class="header-top">
-      <div class="header-logo"><img src="../img/receita-federal-logo.png" alt="logo"/><span class="br-divider vertical mx-half mx-sm-1"></span>
+      <div class="header-logo"><img src="./imagem/receita-federal-logo.png" alt="logo"/><span class="br-divider vertical mx-half mx-sm-1"></span>
         <div class="header-sign">SISCAER-Credenciamento Aeroportuário </div>
       </div>
       <div class="header-actions">
