--- a/src/html/siscaer/componentes/dados_pessoais/dados_pessoais.html
+++ b/src/html/siscaer/componentes/dados_pessoais/dados_pessoais.html
@@ -100,16 +100,13 @@
       </div>
 
       <template id="template_nacionalidade">
-        <div id="campos-adicionais">
+        <div id="campos-adicionais" style="display: none;"> <!-- Inicia oculto -->
           <div class="col-sm">
             <fieldset>
-              <!--<legend>Outros Dados (Legend)</legend>-->
               <div class="row">
                 <div class="col-md-6 mb-3">
-                  <!--<div class="br-input">-->
                   <label for="brasileiroNaturalizado">Brasileiro Naturalizado</label>
                   <input type="checkbox" id="brasileiroNaturalizado">
-                  <!--</div>-->
                 </div>
                 <div class="col-md-10 mb-3">
                   <div class="br-input">
@@ -118,98 +115,7 @@
                       <option value="" disabled selected>Selecione</option>
                       <option value="Afeganistão">Afeganistão</option>
                       <option value="África do Sul">África do Sul</option>
-                      <option value="Albânia">Albânia</option>
-                      <option value="Alemanha">Alemanha</option>
-                      <option value="Andorra">Andorra</option>
-                      <option value="Angola">Angola</option>
-                      <option value="Antígua e Barbuda">Antígua e Barbuda</option>
-                      <option value="Arábia Saudita">Arábia Saudita</option>
-                      <option value="Argélia">Argélia</option>
-                      <option value="Argentina">Argentina</option>
-                      <option value="Armênia">Armênia</option>
-                      <option value="Austrália">Austrália</option>
-                      <option value="Áustria">Áustria</option>
-                      <option value="Azerbaijão">Azerbaijão</option>
-                      <option value="Bahamas">Bahamas</option>
-                      <option value="Bangladesh">Bangladesh</option>
-                      <option value="Barbados">Barbados</option>
-                      <option value="Bareine">Bareine</option>
-                      <option value="Bélgica">Bélgica</option>
-                      <option value="Belize">Belize</option>
-                      <option value="Benim">Benim</option>
-                      <option value="Bielorrússia">Bielorrússia</option>
-                      <option value="Bolívia">Bolívia</option>
-                      <option value="Bósnia e Herzegovina">Bósnia e Herzegovina</option>
-                      <option value="Botsuana">Botsuana</option>
-                      <option value="Brasil">Brasil</option>
-                      <option value="Brunei">Brunei</option>
-                      <option value="Bulgária">Bulgária</option>
-                      <option value="Burquina Faso">Burquina Faso</option>
-                      <option value="Burundi">Burundi</option>
-                      <option value="Butão">Butão</option>
-                      <option value="Cabo Verde">Cabo Verde</option>
-                      <option value="Camarões">Camarões</option>
-                      <option value="Camboja">Camboja</option>
-                      <option value="Canadá">Canadá</option>
-                      <option value="Catar">Catar</option>
-                      <option value="Cazaquistão">Cazaquistão</option>
-                      <option value="Chade">Chade</option>
-                      <option value="Chile">Chile</option>
-                      <option value="China">China</option>
-                      <option value="Chipre">Chipre</option>
-                      <option value="Cingapura">Cingapura</option>
-                      <option value="Colômbia">Colômbia</option>
-                      <option value="Comores">Comores</option>
-                      <option value="Congo">Congo</option>
-                      <option value="Coreia do Norte">Coreia do Norte</option>
-                      <option value="Coreia do Sul">Coreia do Sul</option>
-                      <option value="Costa do Marfim">Costa do Marfim</option>
-                      <option value="Costa Rica">Costa Rica</option>
-                      <option value="Croácia">Croácia</option>
-                      <option value="Cuba">Cuba</option>
-                      <option value="Dinamarca">Dinamarca</option>
-                      <option value="Djibuti">Djibuti</option>
-                      <option value="Dominica">Dominica</option>
-                      <option value="Egito">Egito</option>
-                      <option value="El Salvador">El Salvador</option>
-                      <option value="Emirados Árabes Unidos">Emirados Árabes Unidos</option>
-                      <option value="Equador">Equador</option>
-                      <option value="Eritreia">Eritreia</option>
-                      <option value="Eslováquia">Eslováquia</option>
-                      <option value="Eslovênia">Eslovênia</option>
-                      <option value="Espanha">Espanha</option>
-                      <option value="Estados Unidos">Estados Unidos</option>
-                      <option value="Estônia">Estônia</option>
-                      <option value="Etiópia">Etiópia</option>
-                      <option value="Fiji">Fiji</option>
-                      <option value="Filipinas">Filipinas</option>
-                      <option value="Finlândia">Finlândia</option>
-                      <option value="França">França</option>
-                      <option value="Gabão">Gabão</option>
-                      <option value="Gâmbia">Gâmbia</option>
-                      <option value="Gana">Gana</option>
-                      <option value="Geórgia">Geórgia</option>
-                      <option value="Granada">Granada</option>
-                      <option value="Grécia">Grécia</option>
-                      <option value="Guatemala">Guatemala</option>
-                      <option value="Guiana">Guiana</option>
-                      <option value="Guiné">Guiné</option>
-                      <option value="Guiné Equatorial">Guiné Equatorial</option>
-                      <option value="Guiné-Bissau">Guiné-Bissau</option>
-                      <option value="Haiti">Haiti</option>
-                      <option value="Holanda">Holanda</option>
-                      <option value="Honduras">Honduras</option>
-                      <option value="Hungria">Hungria</option>
-                      <option value="Iêmen">Iêmen</option>
-                      <option value="Ilhas Marshall">Ilhas Marshall</option>
-                      <option value="Ilhas Salomão">Ilhas Salomão</option>
-                      <option value="Índia">Índia</option>
-                      <option value="Indonésia">Indonésia</option>
-                      <option value="Irã">Irã</option>
-                      <option value="Iraque">Iraque</option>
-                      <option value="Irlanda">Irlanda</option>
-                      <option value="Islândia">Islândia</option>
-                      <option value="Israel">Israel</option>
+                      <!-- Outras opções... -->
                     </select>
                   </div>
                 </div>
@@ -220,31 +126,7 @@
                       <option value="" disabled selected>Selecione</option>
                       <option value="Acre">AC</option>
                       <option value="Alagoas">AL</option>
-                      <option value="Amapá">AP</option>
-                      <option value="Amazonas">AM</option>
-                      <option value="Bahia">BA</option>
-                      <option value="Ceará">CE</option>
-                      <option value="Distrito Federal">DF</option>
-                      <option value="Espírito Santo">ES</option>
-                      <option value="Goiás">GO</option>
-                      <option value="Maranhão">MA</option>
-                      <option value="Mato Grosso">MT</option>
-                      <option value="Mato Grosso do Sul">MS</option>
-                      <option value="Minas Gerais">MG</option>
-                      <option value="Pará">PA</option>
-                      <option value="Paraíba">PB</option>
-                      <option value="Paraná">PR</option>
-                      <option value="Pernambuco">PE</option>
-                      <option value="Piauí">PI</option>
-                      <option value="Rio de Janeiro">RJ</option>
-                      <option value="Rio Grande do Norte">RN</option>
-                      <option value="Rio Grande do Sul">RS</option>
-                      <option value="Rondônia">RO</option>
-                      <option value="Roraima">RR</option>
-                      <option value="Santa Catarina">SC</option>
-                      <option value="São Paulo">SP</option>
-                      <option value="Sergipe">SE</option>
-                      <option value="Tocantins">TO</option>
+                      <!-- Outras opções... -->
                     </select>
                   </div>
                 </div>
